--- a/CheckersCheck/CheckersCheck/MainWindow.xaml
+++ b/CheckersCheck/CheckersCheck/MainWindow.xaml
@@ -1,8 +1,14 @@
 ﻿<Window x:Class="CheckersCheck.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="CheckersCheck preAlpha" Height="550" Width="850">
+    <Grid Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="500" />
+            <ColumnDefinition Width="350"/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Column="1" Content="ustawienia"/>
+        <UniformGrid Name="ChessBoard" Grid.ColumnSpan="3" Margin="0,0,16,0" Grid.Column="0">
+        </UniformGrid>
     </Grid>
 </Window>
