--- a/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
@@ -18,9 +18,9 @@
             <WindowsFormsHost x:Name="formsHost"/>
         </Border>
         <Slider x:Name="trackBar1" HorizontalAlignment="Left" Margin="533,101,0,0" VerticalAlignment="Top" Width="278" ValueChanged="trackBar1_ValueChanged" Maximum="255"/>
-        <Button Content="Button1" HorizontalAlignment="Left" Margin="533,252,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button1" HorizontalAlignment="Left" Margin="533,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
         <Button Content="Button2" HorizontalAlignment="Left" Margin="636,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Button3" HorizontalAlignment="Left" Margin="736,252,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button3" HorizontalAlignment="Left" Margin="736,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
         <CheckBox x:Name="checkBox1" Content="CheckBox" HorizontalAlignment="Left" Margin="544,60,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="checkBox2" Content="CheckBox" HorizontalAlignment="Left" Margin="662,60,0,0" VerticalAlignment="Top"/>
 
