--- a/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
@@ -25,6 +25,7 @@
         <CheckBox x:Name="checkBox2" Content="CheckBox" HorizontalAlignment="Left" Margin="662,60,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="leftRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="533,306,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="rightRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="636,306,0,0" VerticalAlignment="Top"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="34" Margin="736,306,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click_4"/>
 
     </Grid>
 </UserControl>
