--- a/CheckersCheck/CheckersCheck/Menu/GamePage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/GamePage.xaml
@@ -10,38 +10,63 @@
             <ColumnDefinition Width="500" />
             <ColumnDefinition Width="380"/>
         </Grid.ColumnDefinitions>
+        <Grid Name="BoardBorder" Height="480" Width="480">
 
-        <Grid Name="ChessBoard" Height="480" Width="480">
+            <Grid Name="ChessBoard" Height="480" Width="480">
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-            </Grid.RowDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="55"></RowDefinition>
+                    <RowDefinition Height="20"></RowDefinition>
+                </Grid.RowDefinitions>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="55"></ColumnDefinition>
-                <ColumnDefinition Width="20"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="55"></ColumnDefinition>
+                    <ColumnDefinition Width="20"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+            </Grid>
+            <Grid Name="c01" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c02" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c03" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c04" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c05" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c06" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c07" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c08" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c09" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c10" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c11" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
+            <Grid Name="c12" Height="25" Width="25" Background="#FF1BA414" Margin="228,228,227,227"></Grid>
 
-
+            <Grid Name="b01" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b02" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b03" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b04" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b05" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b06" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b07" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b08" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b09" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b10" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b11" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            <Grid Name="b12" Height="25" Width="25" Background="#FFE6E613" Margin="228,228,227,227"></Grid>
+            
         </Grid>
-
         <!--<UniformGrid Name="ChessBoard" Grid.Column="0" Height="500" Width="500" VerticalAlignment="Top" HorizontalAlignment="Left">
 
         </UniformGrid>-->
@@ -67,9 +92,12 @@
                 	</InlineUIContainer></TextBlock>
             </Border>
             <Grid Name="Space" Height="100">
-                <Button Content="test move"  Margin="284,70,26,10" Width="70" Height="20"/>
+                <Button Content="test move"  Margin="284,70,26,10" Width="70" Height="20" Click="Button_Click_1"/>
                 <Button Content="test back" Click="Button2_Click" Margin="284,35,26,35" Width="70" Height="20"/>
                 <Button Content="test button" HorizontalAlignment="Left" Margin="284,10,0,0" VerticalAlignment="Top" Width="70" Height="20" Click="StartNewGame_Click"/>
+                <TextBox Name="TextBoxIdPionka" HorizontalAlignment="Left" Height="20" Margin="228,10,0,0" TextWrapping="Wrap" Text="id" VerticalAlignment="Top" Width="51"/>
+                <TextBox Name="TextBoxIntX" HorizontalAlignment="Left" Height="20" Margin="228,40,0,0" TextWrapping="Wrap" Text="x" VerticalAlignment="Top" Width="51"/>
+                <TextBox Name="TextBoxIntY" HorizontalAlignment="Left" Height="20" Margin="228,70,0,0" TextWrapping="Wrap" Text="y" VerticalAlignment="Top" Width="51"/>
             </Grid>
             <Border BorderBrush="Gray" BorderThickness="0,1,0,0">
                 <Grid Name="ResultTable" Height="100">
