--- a/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
@@ -26,6 +26,7 @@
         <RadioButton x:Name="leftRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="533,306,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="rightRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="636,306,0,0" VerticalAlignment="Top"/>
         <Button Content="Button" HorizontalAlignment="Left" Height="34" Margin="736,306,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click_4"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="544,359,0,0" VerticalAlignment="Top" Width="76" Click="Button_Click_5"/>
 
     </Grid>
 </UserControl>
