--- a/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/CalibrationPage.xaml
@@ -18,13 +18,15 @@
             <WindowsFormsHost x:Name="formsHost"/>
         </Border>
         <Slider x:Name="trackBar1" HorizontalAlignment="Left" Margin="533,101,0,0" VerticalAlignment="Top" Width="278" ValueChanged="trackBar1_ValueChanged" Maximum="255"/>
-        <Button Content="Button1" HorizontalAlignment="Left" Margin="533,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
-        <Button Content="Button2" HorizontalAlignment="Left" Margin="636,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Button3" HorizontalAlignment="Left" Margin="736,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
-        <CheckBox x:Name="checkBox1" Content="CheckBox" HorizontalAlignment="Left" Margin="544,60,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox2" Content="CheckBox" HorizontalAlignment="Left" Margin="662,60,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="leftRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="533,306,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="rightRadio" Content="RadioButton" HorizontalAlignment="Left" Margin="636,306,0,0" VerticalAlignment="Top"/>
+        <Button Content="Krok 1" HorizontalAlignment="Left" Margin="533,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button Content="Krok 2" HorizontalAlignment="Left" Margin="636,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Krok 3" HorizontalAlignment="Left" Margin="736,252,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
+        <CheckBox x:Name="checkBox1" Content="Filtr Gaussa" HorizontalAlignment="Left" Margin="544,60,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBox2" Content="Odwrócenie" HorizontalAlignment="Left" Margin="662,60,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="leftRadio" Content="Lewa strona" HorizontalAlignment="Left" Margin="533,306,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="rightRadio" Content="Prawa strona" HorizontalAlignment="Left" Margin="636,306,0,0" VerticalAlignment="Top"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="34" Margin="736,306,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click_4" Visibility="Hidden"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="544,359,0,0" VerticalAlignment="Top" Width="76" Click="Button_Click_5" Visibility="Hidden"/>
 
     </Grid>
 </UserControl>
