--- a/CheckersCheck/CheckersCheck/Menu/GamePage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/GamePage.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com"
              mc:Ignorable="d" 
              d:DesignHeight="545" d:DesignWidth="880">
     <Grid Name="MainGrid">
@@ -40,132 +41,134 @@
                     <ColumnDefinition Width="20"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
             </Grid>
-            <Grid Name="c01" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b1" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c02" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b2" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c03" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b3" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c04" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b4" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c05" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b5" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c06" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b6" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c07" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b7" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c08" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b8" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
-            <Grid Name="c09" Height="35" Width="35" Margin="228,228,227,227">
+            <Grid Name="b9" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="c10" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="c11" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="c12" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
-                </Grid.Background>
-            </Grid>
-
-            <Grid Name="b01" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b02" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b03" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b04" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b05" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b06" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b07" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b08" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
-                </Grid.Background>
-            </Grid>
-            <Grid Name="b09" Height="35" Width="35" Margin="228,228,227,227">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
                 </Grid.Background>
             </Grid>
             <Grid Name="b10" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
             <Grid Name="b11" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
-                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
                 </Grid.Background>
             </Grid>
             <Grid Name="b12" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceBlack.png"/>
+                </Grid.Background>
+            </Grid>
+
+            <Grid Name="w1" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w2" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w3" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w4" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w5" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w6" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w7" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w8" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w9" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w10" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w11" Height="35" Width="35" Margin="228,228,227,227">
+                <Grid.Background>
+                    <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
+                </Grid.Background>
+            </Grid>
+            <Grid Name="w12" Height="35" Width="35" Margin="228,228,227,227">
                 <Grid.Background>
                     <ImageBrush ImageSource="/CheckersCheck;component/Images/pieceWhite.png"/>
                 </Grid.Background>
             </Grid>
 
-        </Grid>
-        <!--<UniformGrid Name="ChessBoard" Grid.Column="0" Height="500" Width="500" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Grid Name="sword" Height="70" Width="70" Panel.ZIndex="99998" Visibility="Hidden">
+                <Image Name="swordGif" gif:ImageBehavior.RepeatBehavior="1x" gif:ImageBehavior.AnimatedSource="/CheckersCheck;component/Images/sword.gif" gif:ImageBehavior.AnimationCompleted="AnimationCompleted" />
+            </Grid>
 
-        </UniformGrid>-->
+        </Grid>
+
 
         <Canvas Grid.Column="1">
             <Image Name="image1" HorizontalAlignment="Center" Height="50" VerticalAlignment="Center" Width="50" Canvas.Left="51" Canvas.Top="50" Grid.Row="1" Grid.Column="1">
@@ -189,11 +192,13 @@
             </Border>
             <Grid Name="Space" Height="100">
                 <Button Content="test move"  Margin="284,70,26,10" Width="70" Height="20" Click="Button_Click_1"/>
-                <Button Content="test back" Click="Button2_Click" Margin="284,35,26,35" Width="70" Height="20"/>
-                <Button Content="test button" HorizontalAlignment="Left" Margin="284,10,0,0" VerticalAlignment="Top" Width="70" Height="20" Click="StartNewGame_Click"/>
+                <Button Content="test capture" Click="Button2_Click" Margin="284,35,26,35" Width="70" Height="20"/>
+                <Button Content="start game" HorizontalAlignment="Left" Margin="284,10,0,0" VerticalAlignment="Top" Width="70" Height="20" Click="StartNewGame_Click"/>
                 <TextBox Name="TextBoxIdPionka" HorizontalAlignment="Left" Height="20" Margin="228,10,0,0" TextWrapping="Wrap" Text="id" VerticalAlignment="Top" Width="51"/>
                 <TextBox Name="TextBoxIntX" HorizontalAlignment="Left" Height="20" Margin="228,40,0,0" TextWrapping="Wrap" Text="x" VerticalAlignment="Top" Width="51"/>
                 <TextBox Name="TextBoxIntY" HorizontalAlignment="Left" Height="20" Margin="228,70,0,0" TextWrapping="Wrap" Text="y" VerticalAlignment="Top" Width="51"/>
+                <TextBox x:Name="TextBoxIntX_Copy" HorizontalAlignment="Left" Height="20" Margin="172,40,0,0" TextWrapping="Wrap" Text="x" VerticalAlignment="Top" Width="51"/>
+                <TextBox x:Name="TextBoxIntY_Copy" HorizontalAlignment="Left" Height="20" Margin="172,71,0,0" TextWrapping="Wrap" Text="y" VerticalAlignment="Top" Width="51" RenderTransformOrigin="-1.127,0.75"/>
             </Grid>
             <Border BorderBrush="Gray" BorderThickness="0,1,0,0">
                 <Grid Name="ResultTable" Height="100">
