--- a/CheckersCheck/CheckersCheck/Menu/StartPage.xaml
+++ b/CheckersCheck/CheckersCheck/Menu/StartPage.xaml
@@ -89,8 +89,8 @@
             </Canvas>
         </Viewbox>
 
-        <Button Content="Nowa Gra" HorizontalAlignment="Left" Margin="364,276,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="3.213,5.1" Height="64" Click="Button_Click" Foreground="#FFD1C863" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF620726"/>
-        <Button Content="Statystki" HorizontalAlignment="Left" Margin="364,358,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="3.213,5.1" Height="64" Click="Button_Click_1"/>
+        <Button Content="Nowa Gra" HorizontalAlignment="Left" Margin="364,322,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="3.213,5.1" Height="64" Click="Button_Click" Foreground="#FFD1C863" FontSize="20" FontFamily="Segoe UI Semibold" Background="#FF620726"/>
+        <Button Content="Statystki" HorizontalAlignment="Left" Margin="364,358,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="3.213,5.1" Height="64" Click="Button_Click_1" Visibility="Hidden"/>
         <Button Content="Twórcy" HorizontalAlignment="Left" Margin="364,427,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="3.213,5.1" Height="64" Click="Button_Click_2"/>
         
     </Grid>
